hphp/hack/test/typecheck/variablevariable_no_name.php.exp
File "variablevariable_no_name.php", line 4, characters 10-12:
Variable variables are not legal; all variable identifiers must be static strings. (Naming[2081])
