hphp/hack/test/typecheck/variablevariable_no_name.php
<?hh

function foo(): varray<int> {
  return $$$;
}
